stylesheets/stylesheet.css
* {
    box-sizing: border-box;
    font-size: 62.5%;
    font-family: "Helvetica Neue", sans-serif;
}

body {
    background-color: #003049;
}

header {
    background-color: #003049;
    position: sticky;
    top: 0;
    z-index: 1;
}

.hero {
    position: relative;
}

.pointer-arrow {
    width: 30px;
    height: 30px;
    background-color: #003049;
    position: absolute;
    transform: rotate(45deg);
    top: 54px;
    z-index: -1;
}

#about-pointer {
    left: 30%;
}

#portfolio-pointer {
    left: 1%;
}

#contact-pointer {
    left: 56%
}

header::after {
    content: "";
    clear: both;
    display: table;
}

.background {
    background-color: #F77F00;
    background-image: linear-gradient(
            to bottom,
            #F77F00 0%,
            #F77F00 40%,
            #003049 40%,
            #003049 100%
    );
}

h1 {
    font-size: 7rem;
    margin: 0 0 0 20px;
    color: #003049;
}

h2 {
    font-size: 3rem;
    margin: 0;
    color: #F77F00;
}

.skills h2 {
    color: #EAE2B7;
    margin: 10px 0;
}

.bio h2 {
    color: #EAE2B7;
}

.email {
    color: #EAE2B7;
}

h3 {
    font-size: 2.5rem;
    color: #EAE2B7;
}

h4 {
    font-size: 1.5rem;
    color: #EAE2B7;
}

p {
    font-size: 2rem;
    color: #EAE2B7;
}

a {
    text-decoration: none;
    font-size: 2.5rem;
    color: #EAE2B7;
}

.nav-bar a {
    font-size: 2.5rem;
    color: #F77F00;
    border: 2px solid #F77F00;
    padding: 5px;
}

.nav-bar a:hover {
    color: #EAE2B7;
}

.left {
    float: left;
}

.right {
    float: right;
}

.logo {
    float: left;
    margin-left: 20px;
}

.container {
    width: 1200px;
    margin: 0 auto;
}

.container::after {
    content: "";
    clear: both;
    display: table;
}

.nav-bar {
    width: 80%;
    display: flex;
    justify-content: space-between;
    float: left;
    align-items: flex-end;
    height: 60px;
    text-transform: uppercase;
}

.nav-container {
    float: right;
    width: 700px;
    position: relative;
}

.portfolio-container {
    display: flex;
    justify-content: space-between;
    width: 1000px;
    margin: 0 auto;
}

.portfolio-cover {
    width: 400px;
    height: 300px;
    top: 0;
    left: 0;
    position: absolute;
}

.portfolio-cover-link {
    position: absolute;
    top: 40%;
    left: 16%;
    color: transparent;
    font-size: 5rem;
}

.portfolio-cover:hover .portfolio-cover-link {
    color: #F77F00;
}

.portfolio-cover:hover {
    background-color: rgba(0, 0, 0, 0.8);
}

.portfolio-item {
    width: 400px;
    position: relative;
}

.portfolio-item h4 {
    margin-bottom: 80px;
}

.portfolio-item h3 {
    margin-top: 5px;
}

.about-container {
    display: flex;
    justify-content: space-around;
    width: 1000px;
    margin: 0 auto;
}

.bio {
    width: 550px;
    border: solid 5px #003049;
    padding: 10px;
    background-color: #003049;
}

.skills {
    background-color: #003049;
    width: 350px;
    padding: 10px;
}

.skill-container {
    display: flex;
    justify-content: space-around;
}

.skill-img {
    height: 80px;
    width: 80px;
}

.exp-img {
    height: 150px;
    width: 150px;
    border-radius: 50%;
    overflow: hidden;
    position: relative;
    background-color: white;
    border: solid 6px #F77F00;
    float: left;
    margin-right: 20px;
}

.exp-img img {
    position: absolute;
    left: 4px;
    bottom: 20px;
    width: 130px;
    height: 130px;
}

.exp-entry p {
    margin-left: 170px;
}

.work-exp-box {
    margin-left: 20px;
    margin-top: 30px;
}

#mail {
    color: #003049;
    font-size: 4rem;
    margin-top: 40px;
}

.social-container {
    display: block;
    height: 140px;
    width: 900px;
}

.social-item {
    display: flex;
    align-items: center;
    height: 140px;
    width: 316px;
}

.social-item img {
    height: 100px;
}

.social-item a {
    margin-left: 20px;
}

.social-item img {
    transition: all .2s ease-in-out;
}

.social-item img:hover {
    transform: scale(1.1);
}

@media only screen and (max-width: 1200px) {
    .exp-entry p {
        width: 700px;
    }

    .email-box {
        width: 1000px;
    }
}

@media only screen and (max-width: 1050px) {
    .portfolio-container {
        width: 900px;
    }

    .email-box {
        width: 800px;
    }

    .about-container {
        flex-direction: column;
        align-items: center;
        height: 700px;
        width: 300px;
    }

    .skills {
        margin-top: 0;
    }

}

@media only screen and (max-width: 930px) {
    .portfolio-container {
        width: 850px;
    }

    .exp-entry p {
        width: 500px;
    }

    .skills {
        margin-top: 0;
    }

    .about-container {
        height: 800px;

    }

    .right {
        float: none;
    }

    .left {
        float: none;
    }

    .social-container {
        width: 280px;
        margin: 0 auto;
        height: 280px;
    }

}

@media only screen and (max-width: 880px) {
    header {
        position: static;
        display: flex;
        flex-direction: column;
        justify-items: center;
    }

    .portfolio-container {
        flex-direction: column;
        align-items: center;
        width: 20px;
    }

    .nav-container {
        margin: 0 auto;
        float: none;
        overflow: auto;
        display: flex;
        justify-content: center;
        width: 600px;
    }

    .nav-bar {
        margin: 0 auto;
        flex-direction: column;
        height: 200px;
        align-items: center;
    }

    .nav-bar a {
        margin-bottom: 20px;
        width: 100%;
        text-align: center;
    }

    .logo {
        font-size: 4rem;
    }
}

@media only screen and (max-width: 700px) {
    .exp-entry p {
        width: 300px
    }

}

@media only screen and (max-width: 610px) {
    .nav-container {
        width: 300px;
    }

    .portfolio-item {
        width: 350px;
    }

    .portfolio-cover {
        width: 350px;
        height: 262px;
    }

    .portfolio-item img {
        max-width: 100%;
        max-height: 100%;
    }

    .portfolio-cover-link {
        left: 13%;
    }

    .bio {
        width: 300px;
    }

    .about-container {
        height: 1000px;
    }

    .skills {
        width: 300px;
    }

    .exp-entry {
        display: flex;
        flex-direction: column;
        align-items: center;
        width: 300px;
    }

    .container {
        width: 350px;
    }

    .work-exp-box {
        margin: 0 auto;
        width: 300px;
    }

    .work-exp-box h2 {
        text-align: center;
    }

    .exp-entry {
        margin: 0 auto;
    }

    .exp-img {
        margin: 20px 0 0 0;
    }

    .exp-entry p {
        margin: 0;
    }

    .social-container {
        width: 300px;
    }

    .email-box {
        width: 350px;
    }

    #mail {
        font-size: 3rem;
    }
}

@media only screen and (max-width: 370px) {
    #mail {
        font-size: 2.5rem;
    }

    .email-box {
        width: 300px;
    }

    .social-item a {
        font-size: 2.2rem;
    }

    .social-item {
        width: 300px;
    }

    p {
        font-size: 1.7rem;
    }

    .container {
        width: 300px;
    }

    .portfolio-item {
        width: 300px;
    }

    .portfolio-cover {
        width: 300px;
        height: 225px;
    }

    .portfolio-cover-link {
        left: 23%;
        top: 40%;
        font-size: 3rem;
    }
}

